--- a/Bike_Sharing_Demand_Prediction.ipynb
+++ b/Bike_Sharing_Demand_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1kCEM2Da184HYfq9-fDaQ-H02tdAf0R3M",
-      "authorship_tag": "ABX9TyN8rUQRNmZeorDKyBWZ5jpk",
+      "authorship_tag": "ABX9TyMPCPvkkDqegLDjvpoKW2Gq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,7 @@
       "source": [
         "##### **Project Type**    - Regression\n",
         "##### **Contribution**    - Group\n",
-        "##### **Presented by**    - Mainudin Chhimpa , Zohaib Sheikh\n",
-        "#####  **[Github link](https://github.com/zohaibsheikh007/Bike-sharing-prediction-ML)**"
+        "##### **Presented by**    - Mainudin Chhimpa , Zohaib Sheikh\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
